# tmls-2021-supercharging-experimentation-pipelines

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TrainingScript.ipynb  dvc.yaml  lightning_entrypoint.py  predict_script.py  pyproject.toml
.dvc/: config
checkpoints/: .gitignore
data/MNIST/: .gitignore  test_images.pt.dvc  test_labels.pt.dvc  train_images.pt.dvc  train_labels.pt.dvc  val_images.pt.dvc  val_labels.pt.dvc
example_configs/: README.md  config.yaml  predict_config.yaml
src/: mnist_data_module.py  mnist_dataset.py  model.py  transforms.py  utils.py
